@@ -2373,8 +2373,8 @@ int imagetopng(opj_image_t * image, const char *write_idf)
 	unsigned char *row_buf, *d;
 	int has_alpha, width, height, nr_comp, color_type;
 	int adjustR, adjustG, adjustB, x, y, fails, is16, force16;
-	int opj_prec, prec, ushift, dshift;
-	unsigned short mask;
+  int opj_prec, prec, ushift, dshift;
+	unsigned short mask = 0xffff;
 	png_color_8 sig_bit;
 
 	is16 = force16 = ushift = dshift = 0; fails = 1;
